style.css
/* ... */
.utau-container:hover {
    background-color: var(--colour1);
    box-shadow: 0 0 30px 5px var(--glow);
    border: 4px solid #ffffff;
    transition: all 200ms ease;
    transform: scale(1.05)
}
.utau-container:active {
    background-color: var(--colour2);
    box-shadow: 0 0 30px 5px var(--glow);
    border: 4px solid #ffffff;
    transition: all 200ms ease;
    transform: scale(.95)
}
.utau-list {
    display: grid;
    grid-template-columns: 50% 50%;
}

.ust-list-container {
    border: 2px solid var(--colour3);
    box-shadow: 0 0 10px 0px var(--shadow);
    border-radius: 1em;
    background-color: var(--background);
    max-width: 700px;
    width: 85%;
    margin: 5px;
    padding: 0;
    align-items: center;
    overflow: hidden;
    transition: all 200ms ease;
    h1 {
        background: linear-gradient(0deg, var(--colour2), var(--colour1));
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
        -webkit-text-stroke: 1.5px var(--colour3);
        background-clip: text;
        font-family: "GNKillGothicU", sans-serif;
        font-weight: initial;
        font-size: 25px;
        text-align: unset;
    }
    h3 {
        margin: 0px;
        color: var(--colour3);
        text-align: unset;
        font-size: 15px;
    }
}
.ust-list-container:hover {
    box-shadow: 0 0 30px 5px var(--glow);
    border: 4px solid #ffffff;
    transition: all 200ms ease;
    transform: scale(1.02)
}
.ust-list-contents {
    display: grid;
    grid-template-columns: 152px auto;
    grid-template-areas:
        'img title'
        'img subtitle'
        'img subsubtitle'
        'buttons buttons';
    align-items: center;
}
.ust-img {
    border-right: 2px solid var(--colour3);
    height: 150px;
    grid-area: img;
    img {
        height: 150px;
    }
}
.ust-title {
    margin-left: 20px;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 1;
    overflow: hidden;
    grid-area: title;
}
.ust-subtitle {
    margin-left: 20px;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 1;
    overflow: hidden;
    grid-area: subtitle;
}
.ust-subsubtitle {
    margin-left: 20px;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 1;
    overflow: hidden;
    grid-area: subsubtitle;
}
.ust-buttons {
    display: grid;
    grid-template-columns: auto auto;
    padding: 10px;
    padding-bottom: 12px;
    gap: 5px;
    border-top: 2px solid var(--colour3);
    grid-area: buttons;
}

.index-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    max-width: 700px;
    row-gap: 10px;
    margin: 20px;
    img {
        width: 100%;
        height: 100%;
    }
    a {
        width: 50%;
        height: 50%;
    }
}

/* ===== THEMES ===== */
.dark-mode {
    color-scheme: dark;
    --text: #feffeb;
    --background: #1f2e2e;
    --colour1: #1f5151;
    --colour2: #66cc86;
    --colour3: #d5edab;
    --shadow: #000000b7;
    --glow: #cfffb3;
    background-image: url(./images/bg-dark.webp);
    background-color: var(--background);
    background-size:cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

/* Styles for the sun and moon icons */
.sun-icon, .moon-icon {
    width: 24px;
    height: 24px;
}
/* Hide moon icon by default */
.moon-icon {
    display: none;
}
/* Swap icon in dark mode */
.dark-mode .sun-icon {
    display: none;
}
.dark-mode .moon-icon {
    display: inline-block;
}
/* ===== THEMES END ===== */

/* ===== CAROUSEL ===== */
/* Carousel container */
.footer {
    border-top: 2px solid var(--colour3);
    box-shadow: 0px 5px 30px var(--shadow);
    box-sizing: border-box;
    background-color: var(--background);
    padding: 10px;
    height: 50px;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 2;
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
}
/* Actual carousel */
.carousel {
    width: 90%;
    max-width: 1640px;
    height: var(--footlink-height);
    margin-inline: auto;
    position: relative;
    overflow: hidden;
    /* Gradient mask at edges */
    mask-image: linear-gradient(
        to right,
        rgba(0,0,0,0),
        rgba(0,0,0,1) 20%,
        rgba(0,0,0,1) 80%,
        rgba(0,0,0,0)
    );
}
.carousel-image {
    width: var(--footlink-width);
    height: var(--footlink-height);
    position: absolute;
    /* Spaces out links when viewport is too wide */
    left: max(calc(var(--footlink-width) * var(--link-amount)), 100%);
    /* Scroll animation */
    animation-name: scrollLeft;
    animation-duration: var(--carousel-duration);
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    cursor: pointer;
}
@keyframes scrollLeft {
    to {
        left: calc(-1 * var(--footlink-width));
    }
}
.carousel:hover .carousel-image {
    animation-play-state: paused;
}
/* Distributes links */
.item1 {
    animation-delay: calc(var(--carousel-duration) / var(--link-amount) * (var(--link-amount) - 1) * -1);
}
.item2 {
    animation-delay: calc(var(--carousel-duration) / var(--link-amount) * (var(--link-amount) - 2) * -1);
}
.item3 {
    animation-delay: calc(var(--carousel-duration) / var(--link-amount) * (var(--link-amount) - 3) * -1);
}
.item4 {
    animation-delay: calc(var(--carousel-duration) / var(--link-amount) * (var(--link-amount) - 4) * -1);
}
.item5 {
    animation-delay: calc(var(--carousel-duration) / var(--link-amount) * (var(--link-amount) - 5) * -1);
}
.item6 {
    animation-delay: calc(var(--carousel-duration) / var(--link-amount) * (var(--link-amount) - 6) * -1);
}
.item7 {
    animation-delay: calc(var(--carousel-duration) / var(--link-amount) * (var(--link-amount) - 7) * -1);
}
.item8 {
    animation-delay: calc(var(--carousel-duration) / var(--link-amount) * (var(--link-amount) - 8) * -1);
}
/* ... */

